# galas

./: .editorconfig  .gitignore  README.md  TODO  noxfile.py  pyproject.toml
src/galas/: __main__.py
tests/: test_main.py
