[tool.poetry]
name = "galas"
version = "0.1.0"
description = ""
authors = ["Jakob Albert <jakob.j.albert@fau.de>"]
readme = "README.md"
packages = [{include = "galas", from = "src"}]

[tool.poetry.dependencies]
python = ">=3.11"
discord-py = ">=2.3.2"
python-dateutil = ">=2.8.2"
python-dotenv = ">=1.0.0"

[tool.poetry.scripts]
galas = "galas.__main__:main"

[tool.poetry.group.dev.dependencies]
black = ">=23.7.0"
coverage = {extras = ["toml"], version = ">=7.3.0"}
freezegun = ">=1.2.2"
isort = ">=5.12.0"
mypy = ">=1.5.1"
pytest = ">=7.4.0"
pyupgrade = ">=3.10.1"
ruff = ">=0.0.285"
safety = ">=2.3.5"
typeguard = ">=4.1.2"
types-python-dateutil = ">=2.8.19.14"

[tool.coverage.paths]
source = ["src", "*/site-packages"]
tests = ["tests", "*/tests"]

[tool.coverage.run]
branch = true
source = ["galas", "tests"]

[tool.coverage.report]
show_missing = true
fail_under = 100

[tool.isort]
profile = "black"
lines_after_imports = 2

[tool.mypy]
strict = true
warn_unreachable = true
pretty = true
show_column_numbers = true
show_error_context = true

# TODO ruff

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
